syntax = "proto3";

package cosmos.authn.v1;

import "google/protobuf/any.proto";

message EventSetCredential {
  string address = 1;
  google.protobuf.Any old_credential = 2;
  google.protobuf.Any new_credential = 3;
}
