syntax = "proto3";

package cosmos.authn.v1;

import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "cosmos/intermodule/v1/options.proto";

service Internal {
  option (cosmos.intermodule.v1.internal) = true;

  rpc CreateModuleAccount (CreateModuleAccountRequest) returns (CreateModuleAccountResponse);
}

service Admin {
  option (cosmos.intermodule.v1.internal) = true;

  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc IncrementSeq (IncrementSeqRequest) returns (IncrementSeqResponse);
}

message CreateAccountRequest {
  bytes address = 1 [(cosmos_proto.scalar) = "cosmos.AddressBytes"];
  google.protobuf.Any credential = 2;
}

message CreateAccountResponse {
  uint64 account_id = 1;
}

message CreateModuleAccountRequest {
  bytes derivation_path = 1;
  google.protobuf.Any credential = 2;
}

message CreateModuleAccountResponse {
  uint64 account_id = 1;
  bytes address = 2 [(cosmos_proto.scalar) = "cosmos.AddressBytes"];
}

message IncrementSeqRequest {
  bytes address = 1 [(cosmos_proto.scalar) = "cosmos.AddressBytes"];
}

message IncrementSeqResponse {
  uint64 new_seq = 1;
}
