syntax = "proto3";

package cosmos.authn.v1;

import "cosmos/orm/v1/orm.proto";
import "google/protobuf/any.proto";

message Account {
  option (cosmos.orm.v1.table) = {
    id: 1
    primary_key: { auto_increment: true fields: "id" }
    index: {id: 1, fields: "address", unique: true}
  };

  uint64 id = 1;
  bytes address = 2;
  google.protobuf.Any credential = 3;
}

message AccountSequence {
  option (cosmos.orm.v1.table) = {
    id: 1
    primary_key: { fields: "id" }
  };

  uint64 id = 1;
  uint64 seq = 2;
}
